--- a/simulations/bananas/src/app.scss
+++ b/simulations/bananas/src/app.scss
@@ -31,7 +31,7 @@
     }
 
     .info-button-icon {
-      color: theme.$border;
+      color: theme.$heading;
     }
   }
 
